apps/monitoring/prometheus/namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: prometheus
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: v1.27
