apps/monitoring/prometheus/route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-prometheus-stack-grafana
spec:
  hostnames: ["grafana.mcmahan.io"]
  parentRefs:
    - name: remote
      namespace: traefik
      sectionName: websecure
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-prometheus-stack-prometheus
spec:
  hostnames: ["prometheus.mcmahan.io"]
  parentRefs:
    - name: local
      namespace: traefik
      sectionName: websecure
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
